Fixed the multi-range sliders in IE by not overlapping them.

--- a/static/main.css
+++ b/static/main.css
@@ -461,10 +461,6 @@ nav ul li.highlight {
     visibility:hidden;
 }
 
-.range-slider input:last-of-type::-ms-track {
-    visibility:hidden;
-}
-
 /*****************/
 /* Slider Widget */
 /*****************/
